php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #26446 DOM_XML_PARSING in domxml_open_file() returns an empty error-Array
Submitted: 2003-11-28 10:09 UTC Modified: 2003-11-28 13:10 UTC
From: msw at seebi dot de Assigned:
Status: Closed Package: DOM XML related
PHP Version: 4.3.4 OS: windows
Private report: No CVE-ID: None
 [2003-11-28 10:09 UTC] msw at seebi dot de
Description:
------------
I' ve tried the option DOMXML_LOAD_PARSING in conjunction with the error-array in domxml_open_file(). If I have a XML file with some errors, the errors will be reported in the browser but the error-Array (the third paramter) is empty. I've used DOMXML_LOAD_VALIDATING with the error-array and it works fine. 

Michael



Reproduce code:
---------------
XML (please see the wrong root element for testing purposes):

<?xml version="1.0"?>
<newsliste id="542"/>
 <news wichtig="ja" id="555">
  </news>
</newsliste>

The PHP-Code:

if(!$dom = @domxml_open_file ("e:/htdocs/test.xml",DOMXML_LOAD_PARSING,$error)) {
  echo "error";
  exit;
}
$err=$error[0];
print ($err[errormessage]);
print ("<br>".$err[nodename]);
print ("<br>".$err[line]);
print ("<br>".$err[col]);
print ("<br>".$err[directory]);
print ("<br>".$err[file]);


Expected result:
----------------
$err[nodename] should have the name of the root element. 

Actual result:
--------------
$err[nodename] is blank. 

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-11-28 13:10 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC