Fix for bug #26446: domxml_open_file() returns an empty error-Array